# finance-agent-evaluator

./: .env.example  .gitignore  CONTEXT_ID_FIX.md  DEPLOYMENT_QUICKSTART.md  Dockerfile  README.md  pyproject.toml
.github/workflows/: publish.yml  test-and-publish.yml
src/: __init__.py  agent.py  dataset.py  environment.py  evaluator.py  executor.py  judges.py  mcp_server.py  messenger.py  observability.py  server.py  tools.py  tracer.py
src/prompts/: __init__.py  contradiction_judge.txt  factual_accuracy_judge.txt  process_quality_judge.txt  task_prompt.txt
tests/: test_no_workflow_hints.py  test_tool_descriptions.py
